Fixed the dash up as well as the feautre engineering and dropped GPA from the dataset

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "id": "15664228",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,7 @@
       "Sports               0\n",
       "Music                0\n",
       "Volunteering         0\n",
+      "GradeClass           0\n",
       "dtype: int64\n"
      ]
     }
@@ -31,12 +32,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import pickle\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('../artifacts/Student_performance_data.csv')\n",
     "df.drop('StudentID', axis=1, inplace=True)\n",
-    "df.drop('GradeClass', axis=1, inplace=True)\n",
     "df.drop('GPA', axis=1, inplace=True)\n",
+    "#df.drop('GradeClass', axis=1, inplace=True)\n",
     "\n",
     "# Check missing values\n",
     "missing_values = df.isnull().sum()\n",
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "id": "039ab7c8",
    "metadata": {},
    "outputs": [
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "id": "e6501b5e",
    "metadata": {},
    "outputs": [
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "id": "7b943ee3",
    "metadata": {},
    "outputs": [
@@ -171,12 +174,15 @@
     "    return df\n",
     "\n",
     "\n",
-    "df_clean = remove_outliers_iqr(df, num_cols)"
+    "df_clean = remove_outliers_iqr(df, num_cols)\n",
+    "\n",
+    "with open(\"../artifacts/cleaned_data.csv\", \"w\") as f:\n",
+    "    df_clean.to_csv(f, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "id": "da8204ec",
    "metadata": {},
    "outputs": [
@@ -196,23 +202,36 @@
        "2390   16       1          1                  0        12.416653        17   \n",
        "2391   16       1          0                  2        17.819907        13   \n",
        "\n",
-       "      Tutoring  ParentalSupport  Extracurricular  Sports  Music  Volunteering  \n",
-       "0            1                2                0       0      1             0  \n",
-       "1            0                1                0       0      0             0  \n",
-       "2            0                2                0       0      0             0  \n",
-       "3            0                3                1       0      0             0  \n",
-       "4            1                3                0       0      0             0  \n",
-       "...        ...              ...              ...     ...    ...           ...  \n",
-       "2387         0                4                1       0      0             0  \n",
-       "2388         1                4                0       1      0             0  \n",
-       "2389         0                2                0       0      0             1  \n",
-       "2390         0                2                0       1      1             0  \n",
-       "2391         0                2                0       0      0             1  \n",
+       "      Tutoring  ParentalSupport  Extracurricular  Sports  Music  Volunteering  \\\n",
+       "0            1                2                0       0      1             0   \n",
+       "1            0                1                0       0      0             0   \n",
+       "2            0                2                0       0      0             0   \n",
+       "3            0                3                1       0      0             0   \n",
+       "4            1                3                0       0      0             0   \n",
+       "...        ...              ...              ...     ...    ...           ...   \n",
+       "2387         0                4                1       0      0             0   \n",
+       "2388         1                4                0       1      0             0   \n",
+       "2389         0                2                0       0      0             1   \n",
+       "2390         0                2                0       1      1             0   \n",
+       "2391         0                2                0       0      0             1   \n",
        "\n",
-       "[2392 rows x 12 columns]>"
+       "      GradeClass  \n",
+       "0            2.0  \n",
+       "1            1.0  \n",
+       "2            4.0  \n",
+       "3            3.0  \n",
+       "4            4.0  \n",
+       "...          ...  \n",
+       "2387         0.0  \n",
+       "2388         4.0  \n",
+       "2389         2.0  \n",
+       "2390         1.0  \n",
+       "2391         1.0  \n",
+       "\n",
+       "[2392 rows x 13 columns]>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
